--- a/package.json
+++ b/package.json
@@ -15,19 +15,26 @@
     "check": "bun run lint && bun run typecheck && bun run test",
     "convex:dev": "convex dev",
     "convex:codegen": "convex codegen",
-    "import:data": "bun run scripts/import-study-data.ts"
+    "import:data": "bun run scripts/import-study-data.ts",
+    "migrate:notes": "bun run scripts/migrate-theme-notes.ts"
   },
   "dependencies": {
     "@tiptap/extension-image": "^3.20.0",
+    "@tiptap/extension-link": "^3.20.0",
     "@tiptap/extension-placeholder": "^3.20.0",
+    "@tiptap/markdown": "^3.20.0",
     "@tiptap/react": "^3.20.0",
     "@tiptap/starter-kit": "^3.20.0",
     "convex": "^1.32.0",
     "fast-xml-parser": "^5.4.1",
+    "gray-matter": "^4.0.3",
     "jszip": "^3.10.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.13.1",
+    "remark-gfm": "^4.0.1",
+    "turndown": "^7.2.2",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
@@ -39,6 +46,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/turndown": "^5.0.6",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.39.1",
